<resources>
    <string name="app_name">AgoraTask</string>
    <string name="agora_logo">Agora Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_the_app">Enter the App!</string>
    <string name="don_t_have_an_account_sign_up"><u>Don\'t have an account? Sign up.</u></string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in"><u>Already have an account? Sign in.</u></string>
    <string name="username">Username</string>
    <string name="online_users">These are the online users:</string>
    <string name="ring">Ring</string>
    <string name="exit">Exit</string>
    <string name="you">You</string>
    <string name="end">End</string>
    <string name="exit_button">Exit Button</string>
</resources>